# signalk-notes-opencpn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bld.bat  build-local-package-example.sh  make-new-plugin.sh  signalk_notes_opencpn_pi.def
.circleci/: config.yml
.github/: build.yml
.github/actions/deploy-cloudsmith/: action.yml
.github/workflows/: build.yml
ci/: circleci-build-android-arm64.sh  circleci-build-msvc.bat  circleci-build-ubuntu-docker.sh  gha-cloudsmith-upload.sh
cmake/: PluginConfigure.cmake  PluginPackage.cmake  PluginSetup.cmake  flatpak-package.sh
cmake/in-files/: cloudsmith-upload.sh.in  org.opencpn.OpenCPN.Plugin.yaml.in
flatpak/: org.opencpn.OpenCPN.Plugin.signalk_notes_opencpn.yaml
github/: github-build-android-arm64.sh  github-build-android-armhf.sh  github-build-debian.sh  github-build-flatpak.sh  github-build-ubuntu-docker.sh  github-build-ubuntu-noble.sh
github/ToBeDeleted/: github-build-debian.sh  github-build-jammy.sh
include/: android_uuid.h  globals.h  nanosvgrast.h  signalk_notes_opencpn_pi.h  svgRenderer.h  tpConfigDialog.h  tpSignalKNotes.h  tpicons.h
msvc/: win_deps.bat
ocpninclude/wx/: json_defs.h  jsonreader.h
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  en_US.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  messages.mo  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  signalk_notes_opencpn_pi.pot  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
savechanges/: CMakeLists.txt  LICENSE
savechanges/.github/workflows/: build.yml
savechanges/cmake/: PluginInstall.cmake  PluginPackage.cmake
src/: android_uuid.cpp  signalk_notes_opencpn_pi.cpp  svgRenderer.cpp  tpConfigDialog.cpp  tpControlDialogImpl.cpp  tpJSON.cpp  tpSignalKNotes.cpp  tpUtils.cpp  tpicons.cpp
